# data_structures

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix  result
.github/workflows/: checks.yml
nix/: checks.nix  devShell.nix  package.nix
src/: main.c
src/array/: array.c  array.h
src/bst/: bst.c  bst.h
